Jan 13, 2022
    Added Addon Manager by nyze. Now addons can be enabled/disabled easily through the GUI.
    Fix for BrivGemFarm required MemoryFunctions addon.
    Added a first run check for Addon Manager.
    EffectKeyHandler classes may now be compatible with EGS.
    Added warning when closing gem farm script. 
    Gem Farm script can now be minimized to the tray when clicking x (choose "no" on prompt).
    Gem Farm script GUI will be shown again when pressing the play button if it is already open.

Jan 12, 2022
    Added offsets for where modron formations are stored, as well as FormationCampaignID  and SaveID in teh FormationSaveHandler.
    Added memory functions:
        ReadFormationSaveIDBySlot
        ReadFormationCampaignID
        GetActiveModronFormation
        GetModronFormationsSaveIDByFormationCampaignID
        GetCurrentModronSaveSlot
    NEW: FKeys now uses the champions in the formation of the active Modron instead of champions in formation Q to do leveling in BrivGemFarm.
    AddOn: Dash Check. A test/proof of concept for a new system of Effect Key Handlers. Hast test options for Dash, Haste, and Contractual Obligations. Steam only.

Jan 11, 2022
    Added new setting to return dashwaiting capability when at max speed. See (ForceDashWait) to BrivGemFarmSettings.json
    AddOn: Dash Check. A test/proof of concept of a potential alternative method to check of Dash is on. Steam only further testing.

Jan 10, 2022
    Added additional troubleshooting options to message boxes when required champions are not found in the formation.
    Jimothy Addon: Can now be used with non Jimothy formations.
    Fixed gold chest purchases always buying 100, even if only gem limit only allows purchase of 1. (fix by Envy)
    Added a swap to E formation option for helping users deal with stacks failing to convert on modron reset. (``BrivJumpBuffer`` in ``BrivGemFarmSettings.json``)