@@ -1,0 +1,3 @@
+# BrivGemFarm_Stats
+## Description:
+This Addon is a companion to BrivGemFarm. It allows some stats to be seen and update in real time. Allows view of current script actions, steelbone stacks, haste stacks,  Gems Per Hour (GPH), Bosses Per Hour (BPH), chest purchase/opening stats, and more.
